src/styles.css
/* GLOBAL STYLES */

:root {
	--primary-color: #e5e5e5;
	--secondary-color: #f0f0f0;
	--text-color: black;
	--button-color: #e5e5e5;
	--button-hover-color: #5f5f5f;
	--link-hover-color: #5f5f5f;
	--positive-change-color: green;
	--negative-change-color: red;
	--loading-light: rgb(116, 167, 255);
	--loading-dark: blue;
	--error-light: rgb(255, 116, 116);
	--error-dark: red;
}

* {
	font-family: 'Courier New', Courier, monospace;
	font-weight: bold;
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	word-spacing: -0.2em;
}

a {
	display: flex;
	align-items: center;
	text-decoration: none;
	color: black;
	transition: all 0.3s ease;
}

a:hover {
	color: var(--link-hover-color);
}

.button {
	background-color: var(--button-color);
	border: none;
	border-radius: 8px;
	padding: 0.75rem 1rem;
	cursor: pointer;
	transition: all 0.3s ease;
}

.button:active {
	transform: scale(0.75);
}

.button:hover {
	background-color: var(--button-hover-color);
}

/* HEADER STYLES */

#countdownContainer {
	text-align: center;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 0.5rem;
}

.time-box {
	background: var(--secondary-color);
	padding: 8px 16px;
	border-radius: 8px;
	min-width: 90px;
	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
	font-weight: bold;
}

.time-box span {
	display: block;
	font-weight: bold;
	color: #e43f5a;
}

.time-box small {
	font-size: 0.8rem;
	text-transform: uppercase;
	letter-spacing: 1px;
	color: #e43f5a;
}

#header {
	background-color: var(--primary-color);
	padding: 0.75rem 2rem;
	display: flex;
	justify-content: space-between;
}

#logoHeader {
	cursor: pointer;
}

.logo {
	color: black;
	text-decoration: none;
	justify-content: center;
	align-items: center;
	display: flex;
}

.logo-image {
	width: 30px;
	height: 30px;
	margin-right: 0.5rem;
}

#searchDiv {
	display: flex;
	justify-content: center;
	background-color: white;
	border: 1px solid black;
	border-radius: 8px;
}

#searchDiv:focus-within {
	outline: 2px solid black;
}

#searchInput {
	border: none;
	border-radius: 8px;
	margin-left: 8px;
}

#searchInput:focus-visible {
	outline: none;
}

#searchButton {
	background-color: white;
	border: none;
	border-radius: 8px;
	cursor: pointer;
	padding: 0.25rem 0.5rem;
	transition: all 0.3s ease;
}

#searchButton:active {
	transform: scale(0.75);
}

/* MAIN CONTAINER STYLING */

#mainContainer {
	padding: 1rem 2rem;
	margin: 0 auto;
	min-height: 100vh;
}

/* CRYPTO DATA CONTAINER STYLING */
#cryptoDataContainer {
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

#imageIndex {
	font-size: 0.9rem;
	margin: 0.5rem;
	padding: 0.5rem;
}

/* CRYPTO TABLE STYLING */

table {
	width: 100%;
	max-width: 1200px;
	text-align: left;
	border-collapse: collapse;
}

tr {
	border-bottom: 1px solid gray;
}

thead, tbody {
	display: table-header-group;
	width: 100%;
}

tbody {
	display: table-row-group;
}

thead tr th {
	cursor: pointer;
	padding: 0.5rem 0;
}

.crypto-index {
	width: 5%;
	padding: 0.5rem 0;
}

.crypto-name {
	font-size: 1rem;
}

.crypto-price {
	width: 30%;
}

.crypto-change {
	width: 20%;
}

.crypto-details {
	display: flex;
	align-items: center;
	gap: 0.5rem;
	padding: 10px;
}

.crypto-image {
	width: 24px;
	height: 24px;
	border-radius: 50%;
	flex-shrink: 0;
}

.crypto-id {
	font-size: 0.9rem;
	color: gray;
	text-transform: uppercase;
}

/* PAGE INFO STYLING */

#pageIndex {
	color: gray; 
}

#cryptoPageInfo button,
#cryptoPageButtons button {
	margin: 0.5rem 0;
}

#pageButtonsContainer {
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin-top: 1rem;
}


/* SKELETON LOADING STYLING */

.skeleton-table {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	max-width: 1200px;
	margin: 0 5.25rem;
	height: 100%;
}

.skeleton-header {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}

.skeleton-body {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}

.skeleton-row {
	display: grid;
	grid-template-columns: 5% 45% 30% 20%;
	align-items: center;
	padding: 0.5rem 0;
	min-height: 1.5rem;
	row-gap: .5rem;
	border-bottom: 1px solid lightgrey;
	position: relative;
}

.skeleton-details {
	display: flex;
	align-items: center;
	gap: 0.5rem;
}

.skeleton {
	background-color: #e0e0e0;
	width: 100%;
	height: 1rem;
	border-radius: 4px;
	overflow: hidden;
}

.shimmer {
	position: absolute;
	top: 0;
	left: 0;
	width: 50%;
	height: 100%;
	background: linear-gradient(
		100deg, 
		rgba(255, 255, 255, 0) 20%,
		rgba(255, 255, 255, 0.5) 50%,
		rgba(255, 255, 255, 0) 80%
	);

	animation: shimmer 1s infinite linear;
}

@keyframes shimmer {
	0% {
		transform: translateX(-300%);
	}
	100% {
		transform: translateX(300%);
	}
}

.skeleton-index {
	width: 30%;
}

.skeleton-text {
	width: 25%;
}

.skeleton-name {
	width: 8%;
}

.skeleton-price {
	width: 15%;
}

.skeleton-change {
	width: 15%;
}

.skeleton-image {
	width: 24px;
	height: 24px;
	border-radius: 50%;
	flex-shrink: 0;
}

/* ERROR MESSAGE STYLING */

.errorMessage {
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	text-align: center;
	background-color: var(--error-light);
	padding: 0.75rem 1rem;
	width: min(90%, 480px);
	margin: 0;
	border: 2px solid var(--error-dark);
	border-radius: 8px;
	z-index: 10;
}

/* COIN PAGES CONTAINER STYLING */

#coinPagesContainer {
	display: grid;
	text-align: left;
	margin: 1rem 2rem;
	place-items: center;
	height: 100vh;
}

.coin-page-header {
	display: flex;
	align-items: center;
	gap: 1rem;
	margin: 0 auto;
}

